--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -1,3 +1,7 @@
 [Settings]
 # 模板文件路径， 默认值: config/demo.txt | Template file path, Default value: config/demo.txt
 source_file = config/mydemo.txt
+# 开启组播源功能，关闭后所有组播源工作模式都将关闭; 可选值: True, False | Enable multicast source function, after closing, all multicast source working modes will be closed; Optional values: True, False
+open_multicast = True
+# 开启查询请求，数据来源于网络（仅针对酒店源与组播源）; 可选值: True, False | Enable query request, data comes from the network (only for hotel source and multicast source); Optional values: True, False
+open_request = True
