--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -10,7 +10,7 @@ open_filter_resolution = True
 # 开启速率过滤，低于最小速率（min_speed）的接口将会被过滤; 可选值: True, False | Enable rate filtering, interfaces below the minimum rate (min_speed) will be filtered; Optional values: True, False
 open_filter_speed = True
 # 开启酒店源功能，关闭后所有酒店源工作模式都将关闭; 可选值: True, False | Enable hotel source function, after closing, all hotel source working modes will be closed; Optional values: True, False
-open_hotel = 河北
+open_hotel = True
 # 开启 Foodie 酒店源工作模式; 可选值: True, False | Enable Foodie hotel source working mode; Optional values: True, False
 open_hotel_foodie = True
 # 开启 FOFA、ZoomEye 酒店源工作模式; 可选值: True, False | Enable FOFA, ZoomEye hotel source working mode; Optional values: True, False
@@ -64,7 +64,7 @@ hotel_num = 10
 # 酒店地区获取分页数量 | Number of hotel region acquisition pages
 hotel_page_num = 1
 # 酒店源地区列表，"全部"表示所有地区 | Hotel source region list, "all" means all regions
-hotel_region_list = 全部
+hotel_region_list = 河北
 # 接口运营商，用于控制结果中只包含填写的运营商类型，支持关键字过滤，英文逗号分隔，不填写表示不指定运营商 | Interface operator, used to control the result to only include the filled operator type, supports keyword filtering, separated by English commas, not filled in means no operator specified
 isp =
 # 结果中偏好的 IPv4 接口数量 | Preferred number of IPv4 interfaces in the result
