--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -68,9 +68,9 @@ hotel_region_list = 河北
 # 接口运营商，用于控制结果中只包含填写的运营商类型，支持关键字过滤，英文逗号分隔，不填写表示不指定运营商 | Interface operator, used to control the result to only include the filled operator type, supports keyword filtering, separated by English commas, not filled in means no operator specified
 isp =
 # 结果中偏好的 IPv4 接口数量 | Preferred number of IPv4 interfaces in the result
-ipv4_num = 9
+ipv4_num = 
 # 结果中偏好的 IPv6 接口数量 | Preferred number of IPv6 interfaces in the result
-ipv6_num = 6
+ipv6_num = 
 # 强制认为当前网络支持IPv6，跳过检测 | Force to consider that the current network supports IPv6, skip detection
 ipv6_support = False
 # 生成结果中接口的协议类型，可选值：ipv4、ipv6、全部、all | Protocol type of the interface in the generated result, optional values: ipv4, ipv6, 全部, all
@@ -84,7 +84,7 @@ local_file = config/local.txt
 # 结果中偏好的本地源接口数量 | Preferred number of local source interfaces in the result
 local_num = 10
 # 接口最小分辨率，需要开启 open_filter_resolution 才能生效 | Minimum resolution of the interface, need to enable open_filter_resolution to take effect
-min_resolution = 960x540
+min_resolution = 720x480
 # 接口最大分辨率，需要开启 open_filter_resolution 才能生效 | Maximum resolution of the interface, need to enable open_filter_resolution to take effect
 max_resolution = 1920x1080
 # 接口最小速率（单位M/s），需要开启 open_filter_speed 才能生效 | Minimum rate of the interface (unit M/s), need to enable open_filter_speed to take effect
