--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -28,7 +28,7 @@ open_multicast_fofa = False
 # 开启关键字搜索源功能; 可选值: True, False | Enable keyword search source function; Optional values: True, False
 open_online_search = False
 # 开启查询请求，数据来源于网络（仅针对酒店源与组播源）; 可选值: True, False | Enable query request, data comes from the network (only for hotel source and multicast source); Optional values: True, False
-open_request = False
+open_request = True
 # 开启RTMP推流功能，需要安装FFmpeg，利用本地带宽提升接口播放体验; 可选值: True, False | Enable RTMP push function, need to install FFmpeg, use local bandwidth to improve the interface playback experience; Optional values: True, False
 open_rtmp = True
 # 开启页面服务，用于控制是否启动结果页面服务；如果使用青龙等平台部署，有专门设定的定时任务，需要更新完成后停止运行，可以关闭该功能; 可选值: True, False | Enable page service, used to control whether to start the result page service; If you use platforms such as Qinglong for deployment, there are special scheduled tasks, you need to stop running after the update is completed, you can turn off this function; Optional values: True, False
@@ -76,7 +76,7 @@ ipv6_support = False
 # 生成结果中接口的协议类型，可选值：ipv4、ipv6、全部、all | Protocol type of the interface in the generated result, optional values: ipv4, ipv6, 全部, all
 ipv_type = 全部
 # 接口协议类型偏好，优先将该类型的接口排在结果前面，可选值：ipv4、ipv6、自动、auto | Interface protocol type preference, prefer to put this type of interface in front of the result, optional values: ipv4, ipv6, 自动, auto
-ipv_type_prefer = auto
+ipv_type_prefer = ipv4
 # 接口归属地，用于控制结果只包含填写的归属地类型，支持关键字过滤，英文逗号分隔，不填写表示不指定归属地，建议使用靠近使用者的归属地，能提升播放体验 | Interface location, used to control the result to only include the filled location type, supports keyword filtering, separated by English commas, not filled in means no location specified, it is recommended to use the location close to the user, which can improve the playback experience
 location =
 # 本地源文件路径，默认值: config/local.txt | Local source file path, Default value: config/local.txt
